@@ -1,5 +1,6 @@
 14 March 2007: Wouter
 	- hash table insert (and subroutines) and lookup implemented.
+	- hash table remove.
 
 13 March 2007: Wouter
 	- lock_unprotect in checklocks.
